--- a/index.html
+++ b/index.html
@@ -2,8 +2,43 @@
 <html>
 
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <div class="container">
+        <h1>Project Title: True Harvest</h1>
+
+
+        <h2>Project Objectives:</h2>
+        <ul>
+            <li>Develop a mobile application utilizing GIS (Geographic Information System) and image processing
+                techniques to determine the correct utilization of agricultural loans.</li>
+            <li>Provide farmers and agricultural experts with a tool to effectively manage agricultural loans.</li>
+            <li>Detect misuse of agricultural loans to prevent fraud and promote the efficient use of resources.</li>
+        </ul>
+
+        <h2>Project Stages and Functionalities:</h2>
+        <ul>
+            <li><strong>User Authentication:</strong> Implement an authentication system for users to log into the
+                application, ensuring that only authorized individuals can use it.</li>
+            <li><strong>Geographic Information System (GIS) Integration:</strong> Collect geographic data of
+                agricultural lands from farmers and integrate this data into the application. Visualize agricultural
+                lands on maps.</li>
+            <li><strong>Image Processing Integration:</strong> Monitor the health of agricultural lands using drone or
+                satellite imagery.</li>
+            <li><strong>Monitoring Loan Usage:</strong> Track how loans are being spent on agricultural areas.</li>
+            <li><strong>Data Analysis and Evaluation:</strong> Provide insights into the effectiveness and efficiency of
+                loan utilization by analyzing agricultural data. Detect misuse and take necessary preventive measures.
+            </li>
+            <li><strong>Security and Data Privacy:</strong> Implement necessary security measures to protect user's
+                personal data and geographic information.</li>
+            <li><strong>User Feedback:</strong> Incorporate a mechanism to collect user feedback about the application.
+                Continuously improve the application based on user feedback.</li>
+        </ul>
+
+        <p>A mobile application incorporating these functionalities can contribute to the more effective and efficient
+            utilization of agricultural loans, potentially increasing farmers' incomes and supporting the sustainability
+            of the agricultural sector.</p>
+
+    </div>
+
 </body>
 
 </html>
