--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             utilization of agricultural loans, potentially increasing farmers' incomes and supporting the sustainability
             of the agricultural sector.</p>
 
+        <h2>Contributors:</h2>
+        <ul>
+            <li>Deniz</li>
+            <li>Ağahan</li>
+            <li>Ömer</li>
+            <li>Yağız Alkılıç</li>
+            <li>Mehmet Ali Erol</li>
+        </ul>
+
     </div>
 
 </body>
