--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
         <h2>Contributors:</h2>
         <ul>
-            <li>Deniz</li>
-            <li>Ağahan</li>
-            <li>Ömer</li>
+            <li>Deniz Semih Özal</li>
+            <li>Ağahan Sözeri</li>
+            <li>Ömer Faruk Coşar</li>
             <li>Yağız Alkılıç</li>
             <li>Mehmet Ali Erol</li>
         </ul>
