--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+    <title>True Harvest</title>
+    <link rel="stylesheet" href="index.css">
+</head>
 <body>
+
     <div class="container">
         <h1>Project Title: True Harvest</h1>
 
