--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>True Harvest</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
 
     <div class="container">
@@ -13,28 +15,30 @@
         <h2>Project Objectives:</h2>
         <ul>
             <li>Develop a mobile application utilizing GIS (Geographic Information System) and image processing
-                techniques to determine the correct utilization of agricultural loans.</li><br/>
-            <li>Provide farmers and agricultural experts with a tool to effectively manage agricultural loans.</li><br/>
-            <li>Detect misuse of agricultural loans to prevent fraud and promote the efficient use of resources.</li><br/>
+                techniques to determine the correct utilization of agricultural loans.</li><br />
+            <li>Provide farmers and agricultural experts with a tool to effectively manage agricultural loans.</li>
+            <br />
+            <li>Detect misuse of agricultural loans to prevent fraud and promote the efficient use of resources.</li>
+            <br />
         </ul>
 
         <h2>Project Stages and Functionalities:</h2>
         <ul>
             <li><strong>User Authentication:</strong> Implement an authentication system for users to log into the
-                application, ensuring that only authorized individuals can use it.</li><br/>
+                application, ensuring that only authorized individuals can use it.</li><br />
             <li><strong>Geographic Information System (GIS) Integration:</strong> Collect geographic data of
                 agricultural lands from farmers and integrate this data into the application. Visualize agricultural
-                lands on maps.</li><br/>
+                lands on maps.</li><br />
             <li><strong>Image Processing Integration:</strong> Monitor the health of agricultural lands using drone or
-                satellite imagery.</li><br/>
-                <li><strong>Monitoring Loan Usage:</strong> Track how loans are being spent on agricultural areas.</li>
+                satellite imagery.</li><br />
+            <li><strong>Monitoring Loan Usage:</strong> Track how loans are being spent on agricultural areas.</li><br/>
             <li><strong>Data Analysis and Evaluation:</strong> Provide insights into the effectiveness and efficiency of
                 loan utilization by analyzing agricultural data. Detect misuse and take necessary preventive measures.
-            </li><br/>
+            </li><br />
             <li><strong>Security and Data Privacy:</strong> Implement necessary security measures to protect user's
-                personal data and geographic information.</li><br/>
+                personal data and geographic information.</li><br />
             <li><strong>User Feedback:</strong> Incorporate a mechanism to collect user feedback about the application.
-                Continuously improve the application based on user feedback.</li><br/>
+                Continuously improve the application based on user feedback.</li><br />
         </ul>
 
         <p>A mobile application incorporating these functionalities can contribute to the more effective and efficient
