--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>True Harvest</title>
-    <!-- Add Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Redirecting...</title>
+    <script>
+        window.location.href = "https://sites.google.com/view/trueharvest/home";
+    </script>
 </head>
 
 <body class="bg-light">
